src/snapshots/libflatterer__tests__basic_for_query.json-json_path--tables.csv.snap
---
source: src/lib.rs
expression: output
---
- "table_name,table_title"
- "main,main"
- "developer,developer"
- "platforms,platforms"

