src/snapshots/libflatterer__tests__basic_in_object.json-datapackage.json.snap
---
source: src/lib.rs
assertion_line: 1965
expression: "&value"

---
profile: tabular-data-package
resources:
  - profile: tabular-data-resource
    name: games
    schema:
      fields:
        - name: _link
          type: string
          count: 2
        - name: _link_main
          type: string
          count: 2
        - name: id
          type: number
          count: 2
        - name: title
          type: string
          count: 2
        - name: releaseDate
          type: datetime
          count: 2
        - name: rating_code
          type: string
          count: 2
        - name: rating_name
          type: string
          count: 2
      primaryKey: _link
      foreignKeys:
        - fields: _link_main
          reference:
            resource: main
            fields: _link
    path: csv/games.csv
  - profile: tabular-data-resource
    name: games_developer
    schema:
      fields:
        - name: _link
          type: string
          count: 2
        - name: _link_games
          type: string
          count: 2
        - name: _link_main
          type: string
          count: 2
        - name: name
          type: string
          count: 2
      primaryKey: _link
      foreignKeys:
        - fields: _link_games
          reference:
            resource: games
            fields: _link
        - fields: _link_main
          reference:
            resource: main
            fields: _link
    path: csv/games_developer.csv
  - profile: tabular-data-resource
    name: games_platforms
    schema:
      fields:
        - name: _link
          type: string
          count: 3
        - name: _link_games
          type: string
          count: 3
        - name: _link_main
          type: string
          count: 3
        - name: name
          type: string
          count: 3
      primaryKey: _link
      foreignKeys:
        - fields: _link_games
          reference:
            resource: games
            fields: _link
        - fields: _link_main
          reference:
            resource: main
            fields: _link
    path: csv/games_platforms.csv
  - profile: tabular-data-resource
    name: main
    schema:
      fields:
        - name: _link
          type: string
          count: 1
      primaryKey: _link
      foreignKeys: []
    path: csv/main.csv

