src/snapshots/libflatterer__tests__basic_in_object.json-table_prefix-tables.csv.snap
---
source: src/lib.rs
expression: output
---
- "table_name,table_title"
- "prefix_games,prefix_games"
- "prefix_games_developer,prefix_games_developer"
- "prefix_games_platforms,prefix_games_platforms"
- "prefix_main,prefix_main"

