src/snapshots/libflatterer__tests__basic_list.json-arrow_new_table-fields.csv.snap
---
source: src/lib.rs
expression: output
---
- "table_name,field_name,field_type,field_title,count"
- "main,_link,text,_link,2"
- "main,id,number,id,2"
- "main,title,text,title,2"
- "main,releaseDate,date,releaseDate,2"
- "rating,_link,text,_link,4"
- "rating,_link_main,text,_link_main,4"
- "rating,value,text,value,4"
- "moo_names,_link,text,_link,4"
- "moo_names,_link_main,text,_link_main,4"
- "moo_names,value,text,value,4"

